<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".VerificationPendingActivity"> <ImageView
    android:id="@+id/image_pending_icon"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:contentDescription="@string/pending_icon_desc"
    app:layout_constraintBottom_toTopOf="@+id/text_pending_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed"
    app:srcCompat="@android:drawable/ic_popup_sync" /> <TextView
    android:id="@+id/text_pending_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/pending_title"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
    android:textAlignment="center"
    app:layout_constraintBottom_toTopOf="@+id/text_pending_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/image_pending_icon" />

    <TextView
        android:id="@+id/text_pending_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pending_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pending_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/logout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pending_description" />

</androidx.constraintlayout.widget.ConstraintLayout>